<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@mipmap/ic_login_background"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        app:subtitleTextColor="@color/black"
        app:title="About"
        app:titleTextColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_login_welcome" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_user_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"/>

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_login_user_name_hint"
        android:inputType="text"
        android:layout_marginHorizontal="16dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginHorizontal="16dp"/>

    <CheckBox
        android:id="@+id/chkSaveLoginInfor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_save_login_infor"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp">

        <RadioButton
            android:id="@+id/radioAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin" />

        <RadioButton
            android:id="@+id/radioEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Employee"
            android:layout_marginLeft="16dp"/>
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:onClick="do_login"
            android:text="@string/title_login_button_login" />

        <ImageView
            android:onClick="do_exit"
            android:id="@+id/imgExit"
            android:layout_width="62dp"
            android:layout_height="47dp"
            app:srcCompat="@mipmap/ic_exit" />
    </LinearLayout>

</LinearLayout>